crates/templates/tests/snapshots/command_argument_test__impl-2.snap
---
source: crates/templates/tests/command_argument_test.rs
expression: output
---
foo)
        action="foo"
        shift
        parse_foo_arguments "$@"
        shift $#
        ;;

