crates/templates/tests/snapshots/command_argument_test__render-2.snap
---
source: crates/templates/tests/command_argument_test.rs
expression: output
---
-f | --foo)
        action="foo"
        shift
        foo_parse_arguments "$@"
        shift $#
        ;;

