crates/templates/tests/snapshots/command_argument_test__render.snap
---
source: crates/templates/tests/command_argument_test.rs
expression: output
---
--foo)
        action="foo"
        shift
        foo_parse_arguments "$@"
        shift $#
        ;;

